# RKNNToolKit_accuracyTest

./: CMakeLists.txt  README.md  build.sh
examples/rknn_classification_demo/: rknn_classification.cc
examples/rknn_identify_demo/: rknn_identify.cc
models/: dla34_u8.rknn.convert.txt  dla34_u8.rknn.load.txt  hrnet_w18_small_v1_u8.rknn.load.txt  ibn_resnet50_u8.rknn.load.txt  resnesta50_u8.rknn.load.txt
org_onnx_models/: README.md  centerface_0706.onnx
